--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -230,6 +230,7 @@
         </div>
     </form>
     <a href="https://github.com/bryangerlach/rdgen">Source Code on github</a>
+    <iframe src="https://github.com/sponsors/bryangerlach/button" title="Sponsor bryangerlach" height="32" width="114" style="border: 0; border-radius: 6px;"></iframe>
     <script>
         document.querySelectorAll('.platform-icon').forEach(icon => {
             icon.addEventListener('click', function() {
