--- a/rdgenerator/templates/generated.html
+++ b/rdgenerator/templates/generated.html
@@ -133,14 +133,13 @@
                 <a href='/download?filename={{filename}}.deb&uuid={{uuid}}' class="download-link">Download {{filename}}.deb</a>
                 <a href='/download?filename={{filename}}.rpm&uuid={{uuid}}' class="download-link">Download {{filename}}.rpm</a>
                 <a href='/download?filename={{filename}}-suse.rpm&uuid={{uuid}}' class="download-link">Download {{filename}}-suse.rpm</a>
-            {% elif platform == 'android' %}
+                <a href='/download?filename={{filename}}.pkg.tar.zst&uuid={{uuid}}' class="download-link">Download {{filename}}.pkg.tar.zst</a>
+                {% elif platform == 'android' %}
                 <a href='/download?filename={{filename}}-aarch64.apk&uuid={{uuid}}' class="download-link">Download {{filename}}-aarch64.apk</a>
                 <a href='/download?filename={{filename}}-x86_64.apk&uuid={{uuid}}' class="download-link">Download {{filename}}-x86_64.apk</a>
                 <a href='/download?filename={{filename}}-armv7.apk&uuid={{uuid}}' class="download-link">Download {{filename}}-armv7.apk</a>
             {% elif platform == 'macos' %}
                 <a href='/download?filename={{filename}}.dmg&uuid={{uuid}}' class="download-link">Download {{filename}}.dmg</a>
-            {% elif platform == 'ios' %}
-                <a href='/download?filename={{filename}}.ipa&uuid={{uuid}}' class="download-link">Download {{filename}}.ipa</a>
             {% else %}
                 <p>Error: No file generated</p>
             {% endif %}
