--- a/rdgenerator/templates/generated.html
+++ b/rdgenerator/templates/generated.html
@@ -140,6 +140,7 @@
                 <a href='/download?filename={{filename}}-armv7.apk&uuid={{uuid}}' class="download-link">Download {{filename}}-armv7.apk</a>
             {% elif platform == 'macos' %}
                 <a href='/download?filename={{filename}}.dmg&uuid={{uuid}}' class="download-link">Download {{filename}}.dmg</a>
+                <a href='/download?filename={{filename}}.dmg&uuid={{uuid}}' class="download-link">Download {{filename}}.dmg</a>
             {% else %}
                 <p>Error: No file generated</p>
             {% endif %}
