--- a/rdgenerator/templates/generated.html
+++ b/rdgenerator/templates/generated.html
@@ -141,7 +141,7 @@
             {% elif platform == 'macos' %}
                 <a href='/download?filename={{filename}}.dmg&uuid={{uuid}}' class="download-link">Download {{filename}}.dmg</a>
             {% elif platform == 'macos-x86' %}
-                <a href='/download?filename={{filename}}.dmg&uuid={{uuid}}' class="download-link">Download {{filename}}.dmg</a>
+                <a href='/download?filename={{filename}}-x86_64.dmg&uuid={{uuid}}' class="download-link">Download {{filename}}-x86_64.dmg</a>
             {% else %}
                 <p>Error: No file generated</p>
             {% endif %}
