--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -249,6 +249,7 @@
                     <option value="android">Android</option>
                     <option value="macos">macOS</option>
                     <option value="macos-x86">macOS (x86)</option>
+                    <option value="ios">iOSTEST</option>
                 </select>
                 <label for="{{ form.version.id_for_label }}">Rustdesk Version:</label>
                 {{ form.version }}
