--- a/rdgenerator/templates/waiting.html
+++ b/rdgenerator/templates/waiting.html
@@ -156,7 +156,7 @@
                 'windows': document.getElementById('windowsLogo'),
                 'macos': document.getElementById('macosLogo'),
                 'linux': document.getElementById('linuxLogo'),
-                'android': document.getElementById('androidLogo')
+                'android': document.getElementById('androidLogo'),
                 'macos-x86': document.getElementById('macosLogo')
             };
 
