--- a/rdgenerator/templates/waiting.html
+++ b/rdgenerator/templates/waiting.html
@@ -135,7 +135,7 @@
     </svg>
 
     <div>
-        <h2 class="loading-text">Build in Progress</h2>
+        <h2 class="loading-text">Grab a coffee or beer, this may take a while</h2>
         <div class="loading-spinner"></div>
         <div class="progress-bar">
             <div id="progressBarFill" class="progress-bar-fill"></div>
